sonar cube issues addressed.